# messenger-automation

./: .aiderignore  .codexignore  .cursorignore  .dockerignore  .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.claude/: settings.json
.codex/: config.toml
.cursor/: hooks.json
.cursor/hooks/: guard-env.py  scan-prompt.py
.cursor/rules/: 00-always.mdc  10-python.mdc  20-tests.mdc  30-security.mdc
.devcontainer/: Dockerfile  devcontainer.json
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  scorecard.yml
docker/: backend.Dockerfile
docs/: walkthrough.md
frontend/: app.js  index.html  nginx.conf  styles.css
src/llm_uv_template/: __init__.py  __main__.py  agent.py  api.py  data.py  models.py  prompts.py
tests/: conftest.py  test_agent.py  test_api.py  test_data.py  test_hooks.py
