[project]
name = "llm-uv-template"
version = "0.1.0"
description = "Secure, agent-ready Python template for building LLM workflows with uv and pydantic-ai."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [{ name = "Your Name", email = "you@example.com" }]
keywords = ["llm", "agents", "pydantic-ai", "uv", "template"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pydantic-ai>=1.96.1,<2",
    "python-dotenv>=1.0",
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.32,<1",
    "faker>=30,<40",
    "httpx>=0.27,<1",
]

[project.scripts]
llm-uv-template = "llm_uv_template.__main__:main"

[project.urls]
Homepage = "https://github.com/your-org/llm-uv-template"
Issues = "https://github.com/your-org/llm-uv-template/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/llm_uv_template"]
# Ensure the PEP 561 marker ships in the wheel so downstream type checkers
# trust this package's annotations.
include = ["src/llm_uv_template/py.typed"]

# ---------------------------------------------------------------------------
# uv: package manager. Pin a uv version range here so every contributor, the
# devcontainer image, and CI all agree on which uv is doing the resolution.
# Bump the upper bound deliberately when you've validated the new uv release.
# ---------------------------------------------------------------------------
[tool.uv]
required-version = ">=0.11,<0.12"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.15.13",
    "mypy>=2.1.0",
    "pre-commit>=4.0",
]

# ---------------------------------------------------------------------------
# Ruff: linter + formatter. Run with `uv run ruff check` / `uv run ruff format`.
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [".venv", "dist", "build"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
    "S",   # flake8-bandit (security)
    "PL",  # pylint
    "TID", # flake8-tidy-imports
    "PTH", # flake8-use-pathlib
    "RET", # flake8-return
    "ARG", # flake8-unused-arguments
    "ANN", # flake8-annotations
]
ignore = [
    "ANN401",  # allow `Any` where it is genuinely needed
    "PLR0913", # too many arguments (agents often take many)
    "PLR2004", # magic numbers acceptable in synthetic data + UI knobs
    "S311",    # random.* is fine for synthetic test/demo data
    "RUF001",  # umlauts and similar non-ASCII are legitimate German content
    "RUF002",  # likewise for German docstrings
    "RUF003",  # likewise for German comments
    "PLC0415", # local imports allowed (FastAPI route handlers, lazy imports)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",    # asserts are fine in tests
    "ANN",     # don't require annotations in tests
    "PLR2004", # magic numbers in tests
]

[tool.ruff.lint.isort]
known-first-party = ["llm_uv_template"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---------------------------------------------------------------------------
# Mypy: strict static typing. Run with `uv run mypy src`.
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
files = ["src", "tests"]

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

# ---------------------------------------------------------------------------
# Pytest. Run with `uv run pytest`.
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config"
asyncio_mode = "auto"
filterwarnings = ["error"]
